core/crates/core/src/reconciler/snapshots/trilithon_core__reconciler__render__tests__empty_state.snap
---
source: crates/core/src/reconciler/render.rs
assertion_line: 806
expression: rendered
---
{
  "@id": "trilithon-owner-local",
  "apps": {
    "http": {
      "servers": {
        "trilithon": {
          "listen": [
            ":443"
          ],
          "routes": []
        }
      }
    },
    "tls": {
      "automation": {}
    }
  }
}
